# pyELQ

./: .gitignore  .pylintrc  404.html  CODEOWNERS  CODEOWNERS.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sonar-project.properties
.github/: bump_version.py  dependabot.yml  get_version.py  pull_request_template.md
.github/workflows/: PR.yml  build_package.yml  code_formatting.yml  main.yml  manual_build.yml  manual_publish_docs.yml  manual_release.yml  manual_sonarcloud_analysis.yml  publish_docs.yml  pydocstyle_check.yml  pylint_check.yml  release_tagging.yml  reuse_compliance.yml  run_tests.yml  sonarcloud_analysis.yml
docs/: index.md
docs/pyelq/: coordinate_system.md  dlm.md  gas_species.md  meteorology.md  model.md  preprocessing.md  source_map.md
docs/pyelq/component/: background.md  component.md  error_model.md  offset.md  source_model.md
docs/pyelq/data_access/: data_access.md
docs/pyelq/dispersion_model/: dispersion_model.md  finite_volume.md  gaussian_plume.md  site_layout.md  turbulence_model.md
docs/pyelq/meteorology/: meteorology.md  meteorology_windfield.md
docs/pyelq/plotting/: plot.md
docs/pyelq/sensor/: beam.md  satellite.md  sensor.md
docs/pyelq/support_functions/: post_processing.md  spatio_temporal_interpolation.md
examples/: example.ipynb  example_basic.ipynb  example_basic.ipynb.license  example_finite_volume_dispersion.ipynb  example_finite_volume_dispersion.ipynb.license  example_finite_volume_forward_simulation.ipynb  example_finite_volume_forward_simulation.ipynb.license  example_fixed_RJ.ipynb  example_multiple_sourcemaps.ipynb  example_multiple_sourcemaps.ipynb.license
pyelq/component/background/: index.html
pyelq/component/component/: index.html
pyelq/component/error_model/: index.html
pyelq/component/offset/: index.html
pyelq/component/source_model/: index.html
pyelq/coordinate_system/: index.html
pyelq/data_access/data_access/: index.html
pyelq/dispersion_model/dispersion_model/: index.html
pyelq/dispersion_model/finite_volume/: index.html
pyelq/dispersion_model/gaussian_plume/: index.html
pyelq/dispersion_model/site_layout/: index.html
pyelq/dispersion_model/turbulence_model/: index.html
pyelq/dlm/: index.html
pyelq/gas_species/: index.html
pyelq/meteorology/: index.html
pyelq/meteorology/meteorology/: index.html
pyelq/meteorology/meteorology_windfield/: index.html
pyelq/model/: index.html
pyelq/plotting/plot/: index.html
pyelq/preprocessing/: index.html
pyelq/sensor/beam/: index.html
pyelq/sensor/satellite/: index.html
pyelq/sensor/sensor/: index.html
pyelq/source_map/: index.html
pyelq/support_functions/post_processing/: index.html
pyelq/support_functions/spatio_temporal_interpolation/: index.html
search/: search_index.json
src/pyelq/: __init__.py  coordinate_system.py  dlm.py  gas_species.py  meteorology.py  meteorology_windfield.py  model.py  preprocessing.py  source_map.py
src/pyelq/component/: __init__.py  background.py  component.py  error_model.py  offset.py  source_model.py
src/pyelq/data_access/: __init__.py  data_access.py
src/pyelq/dispersion_model/: __init__.py  dispersion_model.py  finite_volume.py  gaussian_plume.py  site_layout.py  turbulence_model.py
src/pyelq/meteorology/: __init__.py  meteorology.py  meteorology_windfield.py
src/pyelq/plotting/: __init__.py  plot.py
src/pyelq/sensor/: __init__.py  beam.py  satellite.py  sensor.py
src/pyelq/support_functions/: __init__.py  post_processing.py  spatio_temporal_interpolation.py
tests/: __init__.py  conftest.py  test_coordinate_system.py  test_dlm.py  test_gas_species.py  test_gaussian_plume.py  test_meteorlogy_windfield.py  test_meteorology.py  test_meteorology_windfield.py  test_model.py  test_preprocessing.py  test_source_map.py
tests/component/: __init__.py  test_background_model.py  test_error_model.py  test_offset_model.py  test_source_model.py
tests/dispersion_model/: __init__.py  test_finite_volume.py  test_gaussian_plume.py  test_turbulence_model.py
tests/meteorology/: __init__.py  test_meteorology.py  test_meteorology_windfield.py
tests/sensor/: __init__.py  test_beam.py  test_satellite.py  test_sensor.py  test_sensorgroup.py
tests/support_functions/: __init__.py  test_spatio_temporal_interpolation.py
