# SPDX-FileCopyrightText: 2024 Shell Global Solutions International B.V. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyelq"
version = "1.1.2"
description = "Package for detection, localization and quantification code."
authors = ["Bas van de Kerkhof", "Matthew Jones", "David Randell"]
homepage = "https://sede-open.github.io/pyELQ/"
repository = "https://github.com/sede-open/pyELQ"
documentation = "https://sede-open.github.io/pyELQ/"
readme = "README.md"
license = "Apache-2.0"
keywords = ["gas dispersion", "emission", "detection", "localization", "quantification"]
packages = [{ include = "pyelq", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9"
pandas = ">=2.2.3"
numpy = ">=2.0.2"
plotly = ">=6.0.0"
scipy = ">=1.13.1"
pymap3d = ">=3.1.0"
geojson = ">=3.2.0"
shapely = ">=2.0.7"
scikit-learn = ">=1.6.1"
openmcmc = "==1.0.6"

[tool.poetry.group.contributor]
optional = true

[tool.poetry.group.contributor.dependencies]
black = ">=25.1.0"
isort = ">=6.0.0"
pydocstyle = ">=6.3.0"
pylint = ">=3.3.4"
pytest = ">=8.3.4"
pytest-cov = ">=6.0.0"
mkdocs-material = ">=9.6.2"
mkdocstrings-python = ">=1.14.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.pytest.ini_options]
addopts = "--cov=pyelq --cov-fail-under=90 --ignore-glob=*plot*"
testpaths = ["tests"]

[tool.coverage.report]
omit = ["*plot*", "*/data_access/*", "*/plotting/*", "*post_processing*"]
exclude_lines = [".*def.*plot.*", "from pyelq.plotting.plot import Plot"]

[tool.coverage.run]
relative_files = true
source = ["src/"]

[tool.pylint]
fail-under=9.0
max-line-length=120
py-version=3.11

[tool.black]
line-length = 120
target-version = ['py311']

[tool.pydocstyle]
convention = "google"
add-ignore = ["D105", "D107"]

[tool.isort]
profile = "black"
