# SPDX-FileCopyrightText: 2024 Shell Global Solutions International B.V. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "pyelq"
version = "1.2.5"
description = "Package for detection, localization and quantification code."
authors = [
	{ name = "Bas van de Kerkhof" },
	{ name = "Matthew Jones" },
	{ name = "David Randell" },
]
urls = { Homepage = "https://sede-open.github.io/pyELQ/", Repository = "https://github.com/sede-open/pyELQ", Documentation = "https://sede-open.github.io/pyELQ/" }
readme = "README.md"
license = "Apache-2.0"
keywords = ["gas dispersion", "emission", "detection", "localization", "quantification"]
requires-python = ">=3.11"
dependencies = [
	"pandas>=2.3.3,<3.0.0",
	"numpy>=2.4.0",
	"plotly>=6.5.0",
	"scipy>=1.16.3",
	"pymap3d>=3.2.0",
	"geojson>=3.2.0",
	"shapely>=2.1.2",
	"scikit-learn>=1.8.0",
	"openmcmc==1.0.8",
]

[dependency-groups]
contributor = [
	"black>=25.12.0",
	"isort>=7.0.0",
	"pydocstyle>=6.3.0",
	"pylint>=4.0.4",
	"pytest>=9.0.2",
	"pytest-cov>=7.0.0",
	"mkdocs-material>=9.7.1",
	"mkdocstrings-python>=2.0.1",
]
dev = [
	"ipykernel>=7.1.0,<8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyelq"]

[tool.hatch.build.targets.sdist]
include = ["src/pyelq", "tests", "README.md", "LICENSE.md"]

[tool.pytest.ini_options]
addopts = "--cov=pyelq --cov-fail-under=90 --ignore-glob=*plot*"
testpaths = ["tests"]

[tool.coverage.report]
omit = ["*plot*", "*/data_access/*", "*/plotting/*", "*post_processing*"]
exclude_lines = [".*def.*plot.*", "from pyelq.plotting.plot import Plot"]

[tool.coverage.run]
relative_files = true
source = ["src/"]

[tool.pylint]
fail-under=9.0
max-line-length=120
py-version=3.11

[tool.black]
line-length = 120
target-version = ['py311']

[tool.pydocstyle]
convention = "google"
add-ignore = ["D105", "D107"]

[tool.isort]
profile = "black"
